# sois

./: CMakeLists.txt  csv_parser.cpp  email_validator.cpp  email_validator_no_regex.cpp  html_parser.cpp  phone_extractor.cpp  stop_and_wait.cpp  subsequence_detector.cpp  tcp_sm.cpp  xwing_fsm.cpp
src/: csv_parser.cpp  csv_parser.hpp  kmp.cpp  kmp.hpp  regex_to_nfa.cpp  regex_to_nfa.hpp  regex_to_nfa_main.cpp  tcp_sm.hpp  tcp_sm_lib.cpp
tests/: tests.cpp
